--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>This a new repo created locally</p>
-<p>This is my update from brand feature1</p>
+<p>This is my update from brand feature1 (dropdown)</p>
